[tool.poetry]
name = "pyattck-data"
version = "3.0.0"
description = "Pyattck Data"
authors = ["Swimlane <info@swimlane.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/swimlane/pyattck-data"
repository = "https://github.com/swimlane/pyattck-data"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/swimlane/pyattck-data/releases"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
requests = "^2.31.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["pyattck_data", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.2"
attrs = "^23.1.0"
pendulum = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
