[tool.poetry]
name = "data-collector"
version = "0.1.0"
description = ""
authors = ["Josh Rickard <jrickard@appomni.com>"]
readme = "README.md"
packages = [{include = "data_collector", from = "src"}]
include = [
    "src/data_collector/data/logging.yml"
]

[tool.poetry.scripts]
pyattck-collector = "src.data_collector.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
attrs = "^23.1.0"
pygithub = "^1.59.0"
pyyaml = "^6.0"
openpyxl = "^3.1.2"
orjson = "^3.9.2"
deep-translator = "^1.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
